src/test/ui/issues/issue-2590.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-2590.rs:22:9
   |
LL |         self.tokens //~ ERROR cannot move out of borrowed content
   |         ^^^^^^^^^^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
